--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Junfeng JIANG"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Lorem ipsum College"
+  bio              : "↑↑↑ Are they cute > <!!! Click [Yes] then we'll be friends."
   location         : "Tokyo, Japan"
   employer         :
   pubmed           : 
