--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,18 @@ main:
   - title: "News"
     url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
-
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
-
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Publications"
+    url: "/#-publications"
+
+  - title: "Findings"
+    url: "/#-findings"
 
   - title: "Internships"
     url: "/#-internships"
+
+  - title: "Committees"
+    url: "/#-committees"
+  
