--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Junfeng JIANG's HP"
-description              : "Homepage"
+description              : "↑↑↑ Are they cute? \nClick [Yes] then we'll be friends."
 repository               : "Coldog2333/Coldog2333.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Junfeng JIANG"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "↑↑↑ Are they cute > <!!! Click [Yes] then we'll be friends."
+  bio              : "↑↑↑ Are they cute? Click [Yes] then we'll be friends."
   location         : "Tokyo, Japan"
   employer         :
   pubmed           : 
