--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Findings"
-    url: "/#-findings"
+  - title: "Fundings"
+    url: "/#-fundings"
 
   - title: "Internships"
     url: "/#-internships"
