--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=gvKNfGEAAAAJ"
-  email            : "jiangjf (at) is.s.u-tokyo.ac.jp"
+  email            : "jiangjf@is.s.u-tokyo.ac.jp"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
